WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
127906
[SOUP] Fix the build if !ENABLE(WEB_TIMING)
https://bugs.webkit.org/show_bug.cgi?id=127906
Summary
[SOUP] Fix the build if !ENABLE(WEB_TIMING)
Csaba Osztrogonác
Reported
2014-01-30 05:39:00 PST
build log: [ 15%] Building CXX object Source/WebCore/CMakeFiles/WebCore.dir/platform/network/soup/SoupNetworkSession.cpp.o /home/ossy/WebKit/Source/WebCore/platform/network/soup/SoupNetworkSession.cpp:81:13: error: 'void WebCore::requestStartedCallback(SoupSession*, SoupMessage*, SoupSocket*, gpointer)' defined but not used [-Werror=unused-function] cc1plus: all warnings being treated as errors
Attachments
Patch
(1.71 KB, patch)
2014-01-30 05:40 PST
,
Csaba Osztrogonác
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Csaba Osztrogonác
Comment 1
2014-01-30 05:40:27 PST
Created
attachment 222661
[details]
Patch
Csaba Osztrogonác
Comment 2
2014-01-30 05:59:53 PST
Comment on
attachment 222661
[details]
Patch Clearing flags on attachment: 222661 Committed
r163081
: <
http://trac.webkit.org/changeset/163081
>
Csaba Osztrogonác
Comment 3
2014-01-30 05:59:59 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug