[SOUP] Fix the build if !ENABLE(WEB_TIMING) https://bugs.webkit.org/show_bug.cgi?id=127906

Reviewed by Gustavo Noronha Silva.

* platform/network/soup/SoupNetworkSession.cpp:

Canonical link: https://commits.webkit.org/145906@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@163081 268f45cc-cd09-0410-ab3c-d52691b4dbfc